--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<article class="foto">
-			<img src="assets\img\eu.jpg">
+			<img src="assets\img\eu.png">
 		</article>
 
 		<aside class="ladoInfo">
