--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
 		<title>Rodrigo Falcão</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, user-scalable=no">
 	</head>
 	<body>
-		<article class="foto">
-			<img src="assets\img\eu.png">
-		</article>
+			<article class="foto">
+				<img src="assets\img\eu.png">
+			</article>
 
-		<aside class="ladoInfo">
-			<h1 class="nome">
-				Rodrigo Falcão
-				<h2 class="bio">
-					<div>
-						Estudante de Ciência da Computação em <a href="http://www2.cin.ufpe.br/site/index.php"> CIn</a> (UFPE).
-					</div>
-				</h2>
-				<h3 class="local"> Recife, Pernambuco, Brazil. <div>Telefone: <a href="tel:+5581981889846">+5581981889846</a></div> <div>E-mail:<a href="mailto:rmmaf@cin.ufpe.br">rmmaf@cin.ufpe.br</a></div></h3>
-			</h1>
-		</aside>		
-		<footer>
-			<a href="tel:+5581981889846"><img src="assets\img\phone.png"></a>
-			<a href="mailto:rmmaf@cin.ufpe.br"><img src="assets\img\gmail.png"></a>
-			<a href="https://github.com/rmmaf"><img src="assets\img\gitbub.png"></a>
-			<a href="https://www.linkedin.com/in/rodrigo-falc%C3%A3o-703478144/"><img src="assets\img\in.png"></a>
-			<a href="https://www.facebook.com/digomatatois"><img src="assets\img\fb.png"></a>
-			<a href="https://www.instagram.com/rodrigo_falcao98/?hl=pt-br"><img src="assets\img\insta.png"></a>
-		</footer>
+			<aside class="ladoInfo">
+				<h1 class="nome">
+					Rodrigo Falcão
+					<h2 class="bio">
+						<div>
+							Estudante de Ciência da Computação em <a href="http://www2.cin.ufpe.br/site/index.php"> CIn</a> (UFPE).
+						</div>
+					</h2>
+					<h3 class="local"> Recife, Pernambuco, Brazil. <div>Telefone: <a href="tel:+5581981889846">+5581981889846</a></div> <div>E-mail:<a href="mailto:rmmaf@cin.ufpe.br">rmmaf@cin.ufpe.br</a></div></h3>
+				</h1>
+			</aside>
+		<div class="baixo">	
+			<footer>
+				<a href="tel:+5581981889846"><img src="assets\img\phone.png"></a>
+				<a href="mailto:rmmaf@cin.ufpe.br"><img src="assets\img\gmail.png"></a>
+				<a href="https://github.com/rmmaf"><img src="assets\img\gitbub.png"></a>
+				<a href="https://www.linkedin.com/in/rodrigo-falc%C3%A3o-703478144/"><img src="assets\img\in.png"></a>
+				<a href="https://www.facebook.com/digomatatois"><img src="assets\img\fb.png"></a>
+				<a href="https://www.instagram.com/rodrigo_falcao98/?hl=pt-br"><img src="assets\img\insta.png"></a>
+			</footer>
+		</div>
 	</body>
 </html>
