--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 	</head>
 	<body>
+		<div class="cima">
 			<article class="foto">
 				<img src="assets\img\eu.png">
 			</article>
@@ -24,6 +25,7 @@
 					<h3 class="local"> Recife, Pernambuco, Brazil. <div>Telefone: <a href="tel:+5581981889846">+5581981889846</a></div> <div>E-mail:<a href="mailto:rmmaf@cin.ufpe.br">rmmaf@cin.ufpe.br</a></div></h3>
 				</h1>
 			</aside>
+		</div>
 		<div class="baixo">	
 			<footer>
 				<a href="tel:+5581981889846"><img src="assets\img\phone.png"></a>
